--- a/voicedover/pyproject.toml
+++ b/voicedover/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.110.2"
 openai = "^1.23.6"
 uvicorn = {extras = ["standard"], version = "^0.29.0"}
 python-dotenv = "^1.0.1"
+python-docx = "^1.1.0"
 
 
 [build-system]
