--- a/voicedover/pyproject.toml
+++ b/voicedover/pyproject.toml
@@ -12,6 +12,7 @@ openai = "^1.23.6"
 uvicorn = {extras = ["standard"], version = "^0.29.0"}
 python-dotenv = "^1.0.1"
 python-docx = "^1.1.0"
+pydantic = "^2.7.1"
 
 
 [build-system]
