--- a/voicedover/pyproject.toml
+++ b/voicedover/pyproject.toml
@@ -13,6 +13,9 @@ uvicorn = {extras = ["standard"], version = "^0.29.0"}
 python-dotenv = "^1.0.1"
 python-docx = "^1.1.0"
 pydantic = "^2.7.1"
+streamlit = "^1.33.0"
+sounddevice = "^0.4.6"
+soundfile = "^0.12.1"
 
 
 [build-system]
