--- a/voicedover/pyproject.toml
+++ b/voicedover/pyproject.toml
@@ -15,6 +15,9 @@ pydantic = "^2.7.1"
 streamlit = "^1.33.0"
 sounddevice = "^0.4.6"
 soundfile = "^0.12.1"
+transformers = "^4.40.1"
+sentencepiece = "^0.2.0"
+datasets = {extras = ["audio"], version = "^2.19.0"}
 
 
 [build-system]
