--- a/voicedover/pyproject.toml
+++ b/voicedover/pyproject.toml
@@ -18,6 +18,7 @@ soundfile = "^0.12.1"
 transformers = "^4.40.1"
 sentencepiece = "^0.2.0"
 datasets = {extras = ["audio"], version = "^2.19.0"}
+speechbrain = "^1.0.0"
 
 
 [build-system]
